# stanford_wbc

./: .gitattributes  CHANGELOG  CMakeLists.txt  Doxyfile.in  Makefile  Makefile.ros  README  README.md  TO-DO-FOR-WBCRUN-REMOVAL  bash-env-wbc  bootstrap-devkit.sh  macros.cmake  rundox.sh  runtests.sh  stanford_wbc-1.1.CHANGELOG  wbc.cmake  wbc_ros_support.cmake
applications/: CMakeLists.txt  rawservo.cpp  robot-bridge.cpp  wbcmodel.cpp  wbcservo.cpp  wbcuser.cpp
attic/wbcnet/: CMakeLists.txt  README
elastic/: CMakeLists.txt  elastic.cpp  elastic.hpp  testelastic.cpp  testelastic.yaml
jspace/: CMakeLists.txt  Controller.cpp  Controller.hpp  JSpaceState.hpp  Model.cpp  Model.hpp  README  State.cpp  State.hpp  Status.cpp  controller_library.cpp  controller_library.hpp  example.cpp  tao_dump.cpp  tao_util.hpp  vector_util.hpp
jspace-tests/: CMakeLists.txt  benchProxyDelays.cpp  model_library.cpp  model_library.hpp  sai_brep_parser.cpp  testJspace.cpp  util.cpp  util.hpp
jspace/applications/: CMakeLists.txt  dynsim.cpp  sai2lotus.cpp  sinewave.py  trjcheck.cpp  trjsim.cpp
jspace/doc/: Doxyfile.in  mainpage.dox  rundox.sh
jspace/examples/: pr2_left_arm.xml  puma.xml  trj-1.txt  trj-2-a.txt  trj-2dof-b.txt  trj-6dof-a.txt  trj-6dof-b.txt  unit-mass-px.xml  unit-mass-pz.xml  unit-mass-rx-rx.xml  unit-mass-rx.xml  unit-mass-rz.xml
jspace/jspace/: Controller.cpp  Controller.hpp  Model.cpp  Model.hpp  RobotAPI.hpp  ServoAPI.hpp  State.cpp  State.hpp  Status.cpp  Status.hpp  controller_library.cpp  controller_library.hpp  inertia_util.cpp  inertia_util.hpp  proxy_util.cpp  proxy_util.hpp  robot_proxy.cpp  robot_proxy.hpp  servo_proxy.cpp  servo_proxy.hpp  strutil.cpp  strutil.hpp  tao_dump.cpp  tao_dump.hpp  tao_util.cpp  tao_util.hpp  vector_util.cpp  vector_util.hpp  wrap_eigen.cpp  wrap_eigen.hpp
jspace/ros/: Model.hpp  urdf_dump.hpp  urdf_to_tao.hpp
jspace/tests/: CMakeLists.txt  benchProxyDelays.cpp  inertia_util.cpp  inertia_util.hpp  model_library.cpp  model_library.hpp  sai_brep.cpp  sai_brep.hpp  sai_brep_parser.hpp  testJspace.cpp  testServoProxy.cpp  testThrowThroughFunctionPointer.cpp  test_std_string.cpp  util.hpp
opspace/: CMakeLists.txt  README.md
opspace/doc/: Doxyfile.in  mainpage.dox
opspace/src/: ClassicTaskPostureController.cpp  Controller.cpp  Factory.cpp  Parameter.cpp  Skill.cpp  Task.cpp  TypeIOTGCursor.cpp  parse_yaml.cpp  pseudo_inverse.cpp  skill_library.cpp  task_library.cpp  testFactory.cpp  testTask.cpp
plugins/nwrobot/: CMakeLists.txt  RobotNetWrapper.cpp  RobotNetWrapper.hpp  plugin.cpp
plugins/robotlog/: CMakeLists.txt  plugin.cpp  readlog.cpp  readlog.hpp  test.cpp  writelog.cpp  writelog.hpp
robarch/: CMakeLists.txt  Makefile
robarch/glob_rob_ds/: SGlobalRobotDS.hpp  SGraphicsRobotLink.hpp
robarch/lotusarchitect/: CLotusArchitect.hpp  LotusHeaders.hpp
saimatrix/: CMakeLists.txt  COPYING  SAIGlobalDefn.h  SAILapack.cpp  SAIMath.h  SAIMathDefn.h  SAIMatrix.cpp  SAIMatrix.h  SAIMatrix6.cpp  SAIQuaternion.cpp  SAIQuaternion.h  SAITransform.cpp  SAITransform.h  SAIVector.cpp  SAIVector.h  SAIVector3.h  SAIVector6.cpp  lnsaimatrix.sh
saimatrix/saimatrix/: SAILapack.h  SAIMatrix3.h  SAIMatrix6.h  SAIVector.h
saimatrix/tests/: test_SAILapack.cpp  test_lapack_svd.cpp
tao/: CMakeLists.txt  Doxyfile.in  LICENSE  lntao.sh  mainpage.dox  rundox.sh
tao/doc/: Doxyfile.in
tao/dynamics/: tao.h  taoABDynamics.cpp  taoABDynamics.h  taoABJoint.cpp  taoABJoint.h  taoABNode.cpp  taoABNode.h  taoCNode.cpp  taoCNode.h  taoDNode.h  taoDVar.h  taoDynamics.cpp  taoDynamics.h  taoGroup.cpp  taoGroup.h  taoJoint.cpp  taoJoint.h  taoNode.cpp  taoNode.h  taoTypes.h  taoWorld.cpp
tao/matrix/: TaoDeFrame.h  TaoDeFrame.inl  TaoDeMath.h  TaoDeMatrix3.inl  TaoDeMatrix3f.cpp  TaoDeMatrix6.cpp  TaoDeMatrix6.inl  TaoDeQuaternion.h  TaoDeTransform.cpp  TaoDeTypes.h  TaoDeVector3.h  TaoDeVector6.cpp  TaoDeVector6.h
tao/tests/: testTAO.cpp
tao/utility/: TaoDeLogger.cpp  TaoDeMassProp.cpp  TaoDeMassProp.h
tests/: CMakeLists.txt  TestDirectory.cpp  TestDirectory.hpp  testBRBuilder.cpp  testDirectoryServer.cpp  testDtorCheck.cpp  testJspace.cpp  testProcess.cpp  testPumaDynamics.cpp  test_model_servo.cpp  test_process.cpp
tests/puma/: CMakeLists.txt  PrGlobalDefn.h  PrMathDefn.h  PrMatrix.cpp  PrMatrix.h  PrMatrix3.cpp  PrMatrix3.h  PrMatrix6.cpp  PrMatrix6.h  PrVector.cpp  PrVector.h  PrVector3.cpp  PrVector3.h  PrVector6.cpp  PrVector6.h  XPrintf.cpp  XPrintf.h  XUtils.h  param.h  pumaDynamics.cpp  pumaDynamics.h
tutorials/: CMakeLists.txt  ObstAvoidTask.cpp  ObstAvoidTask.hpp  obstavoid.yaml  tut00_test.cpp  tut01_joint_coupling.cpp  tut02_jtask.cpp  tut03_gravity_compensation.cpp  tut04_inertia_compensation.cpp  tut04_inertia_coriolis.cpp  tut05_eepos_no_posture.cpp  tut05_opspace_and_parameters.cpp  tut06_eepos.cpp  tut07_obstavoid.cpp  tutrob.xml  tutsim.cpp  tutsim.hpp
tutorials/uta_opspace/: ControllerNG.cpp  ControllerNG.hpp
wbc/: CMakeLists.txt  COPYING  LICENSE  wbc.cmake
wbc/applications/: CMakeLists.txt  jspace-servo.cpp
wbc/core/: BehaviorDescription.cpp  BehaviorDescription.hpp  BehaviorFactory.hpp  BranchingRepresentation.cpp  BranchingRepresentation.hpp  Contact.cpp  Dynamics.cpp  Dynamics.hpp  Kinematics.cpp  Kinematics.hpp  MobileManipulatorServoBehaviors.cpp  MobileManipulatorServoBehaviors.hpp  MobileManipulatorTaskModel.cpp  MobileManipulatorTaskModel.hpp  Plugin.cpp  Plugin.hpp  RawControllerAPI.hpp  RobotAPI.hpp  RobotControlModel.hpp  RobotFactory.cpp  RobotFactory.hpp  SAIMatrixAPI.cpp  TaskModelBase.cpp  (+8 more)
wbc_plugins/: CMakeLists.txt
wbc_tinyxml/: CMakeLists.txt  README  wbc_tinystr.h  wbc_tinyxmlerror.cpp  wbc_tinyxmlparser.cpp
wbcnet/: CMakeLists.txt  Makefile  Makefile.am  bootstrap-automake.sh  configure.ac  wbcnet_config.h.in
wbcrun/: CMakeLists.txt  DLModule.hpp  Doxyfile.in  Process.cpp  Process.hpp  README  TBR-service.cpp  TBR-service.hpp  TaskModelAPI.hpp  UserProcess.cpp  UserProcess.hpp  directory.cpp  directory.hpp  lnwbcrun.sh  message_id.cpp  message_id.hpp  rundox.sh  service.cpp  util.cpp
(+481 files in other folders)
